--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "albumentations>=2.0.8",
     "colorama>=0.4.6",
     "einops>=0.8.1",
+    "jupyter>=1.1.1",
     "label-studio>=1.20.0",
     "matplotlib>=3.10.5",
     "torch>=2.8.0",
