--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.pt filter=lfs diff=lfs merge=lfs -text
 archive/goodcheckpoints/1000_model.pt filter=lfs diff=lfs merge=lfs -text
+pretrained/4425_model.pt filter=lfs diff=lfs merge=lfs -text
