--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,16 @@ detrtest.py
 realtimeimage.py
 data/archive
 
-checkpoints
 # data
+checkpoints
+# macOS system files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 LossAnalysis.ipynb
 .ipynb_checkpoints
 archive
